# impulse_mcmc

./: .gitignore  LICENSE  LICENSE.md  README.md  prior_test.ipynb  pta_test.ipynb  pyproject.toml  setup.cfg  test.ipynb  test_model.py  todo.md
examples/: covgroups.ipynb  grid_approx.ipynb  pta_prior_test copy.ipynb  pta_prior_test.ipynb  pta_test.ipynb  sine_model.py  sinusoidal_model.ipynb  test.ipynb  test_2_model.ipynb  test_hypermodel.ipynb  test_model.py  vectorized_sinusoid.ipynb
examples/pt_hm/: cov.npy
examples/temp_data/: accept.txt  temps.txt
impulse/: __init__.py  base.py  batch_updates.py  convergence.py  data_io.py  impulse.py  mhsampler.py  online_updates.py  product_space.py  proposals.py  pta_utils.py  ptsampler.py  random_nums.py  reversible_jump.py  rjsampler.py  sampler.py  save_data.py  save_hdf.py
impulse/pta/: hypermodel.py  pta_jumps.py  pta_utils.py
impulse/pta_utils/: pta_jumps.py  pta_utils.py
