[project]
name = "impulse-mcmc"
version = "1.0.0"
authors = [
  { name="Aaron D. Johnson", email="aaron9035@gmail.com" },
]
description = "A rewrite of PTMCMCSampler focusing on modularity"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]
dependencies = [
  "numpy >= 2.2.2",
  "scipy >= 1.15.1",
  "tqdm >= 4.67.1",
]

[project.urls]
Homepage = "https://github.com/AaronDJohnson/impulse_mcmc"
Issues = "https://github.com/AaronDJohnson/impulse_mcmc/issues"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
